Only deploy to my github pages thing, so this will not fail for forks anymore

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,5 +1,5 @@
 
-name: CI
+name: deploy-github-pages
 
 permissions:
   id-token: write
@@ -52,6 +52,8 @@ jobs:
           path: 'web'
 
   deploy:
+    # Only run if we can deploy to https://spritetm.github.io/plexus_20_emu/
+    if: ${{ github.repository == 'Spritetm/plexus_20_emu' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
